final_push_responsive

--- a/html/jeux.html
+++ b/html/jeux.html
@@ -3,36 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <title>monde d'ankama</title>
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
     <div class="main-body">
+        <div class="whole-page">
       <!--------------------------------------------------------------------------header------------------------------------------------------------------------------------->
       <header>
         <div class="main-header">
           <div class="logo">
-            <img src="./images/logo_anakama.png" alt="Logo logo_anakama" />
+            <img src="../images/logo_anakama.png" alt="Logo logo_anakama" />
           </div>
           <div class="main-nav">
             <nav>
               <div class="nav-content">
-                <li><a href="./index.html">Accueil</a></li>
-                <li><a href="./html/jeux.html">Jeux</a></li>
-                <li><a href="./html/livres_et_BDs.html">Livres et BDs</a></li>
+                <li><a href="../index.html">Accueil</a></li>
+                <li><a href="../html/jeux.html">Jeux</a></li>
+                <li><a href="../html/livres_et_BDs.html">Livres et BDs</a></li>
                 <li>
-                  <a href="./html/series_et_films.html">Series et films</a>
+                  <a href="../html/series_et_films.html">Series et films</a>
                 </li>
-                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
               </div>
             </nav>
           </div>
         </div>
       </header>
       <!--------------------------------------------------------------------------main------------------------------------------------------------------------------------->
-      <main>
-        <div class="main">
+      <body>
+        <div class="main-body">
           <div class="main-story">
-            <div class="main-story-title"><h1>Ankama Studio</h1></div>
+            <div class="main-story-title">
+              <h1>Ankama Studio</h1>
+            </div>
             <div class="main-story-text">
               <p>
                 Ankama est fondée en 2001 à Roubaix, dans le département du
@@ -44,11 +47,12 @@
           </div>
         </div>
         <article>
-          <div class="main-article">
-            <div class="game-article">
+          
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/Dofus_Logo.png" alt="Logo Dofus" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h2>Dofus</h2>
               </div>
@@ -63,15 +67,17 @@
                   Joueurs contre Joueurs, Joueurs contre Monstres ou l'économie.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img
                   src="../images/Dofus_Arena_Logo.png"
                   alt="logo dofus Arena"
                 />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h2>Dofus Arena</h2>
               </div>
@@ -83,12 +89,14 @@
                   de tournois dans la vie réelle.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/Wakfu_Logo.png" alt="Logo Wakfu" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h2>Wakfu</h2>
               </div>
@@ -100,12 +108,14 @@
                   explorer, perché sur votre fidèle destrier Dragodinde.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/Fly'n_Logo.png" alt="Logo Fly'n" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h2>fly'n</h2>
               </div>
@@ -117,12 +127,14 @@
                   sève des arbres.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/Krosmaga_Logo.png" alt="Logo Krosmaga" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h3>Krosmaga</h3>
               </div>
@@ -136,12 +148,14 @@
                   s'affronter dans des combats PvP sans merci.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/logo_kwaan.webp" alt="Logo Kwaan" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h3>Kwaan</h3>
               </div>
@@ -153,12 +167,14 @@
                   COLLABOREZ et fraternisez avec les autres membres de la tribu.
                 </p>
               </div>
+              </div>
             </div>
 
-            <div class="game-article">
+            <div class="main-article">
               <div class="main-article-image">
                 <img src="../images/Abraca_Logo.jpg" alt="Logo Abraca" />
               </div>
+              <div class="article-text-whole">
               <div class="main-article-title">
                 <h3>Abraca</h3>
               </div>
@@ -170,11 +186,18 @@
                   d'embûches où tous les coups sont permis !
                 </p>
               </div>
+            
             </div>
           </div>
         </article>
+    </div>
       </main>
       <!--------------------------------------------------------------------------footer------------------------------------------------------------------------------------->
+      <footer>
+        <div class="footer">
+          <p>Anthony Zeitoun© Novembre 2022</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
