--- a/html/livres_et_BDs.html
+++ b/html/livres_et_BDs.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>monde d'ankama</title>
-    <link rel="stylesheet" href="./style/style.css" />
-  </head>
-  <body>
-    <div class="main-body">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>monde d'ankama</title>
+  <link rel="stylesheet" href="../style/style.css" />
+</head>
+
+<body>
+  <div class="main-body">
+    <div class="whole-page">
       <!--------------------------------------------------------------------------header------------------------------------------------------------------------------------->
       <header>
         <div class="main-header">
           <div class="logo">
-            <img src="./images/logo_anakama.png" alt="Logo logo_anakama" />
+            <img src="../images/logo_anakama.png" alt="Logo logo_anakama" />
           </div>
           <div class="main-nav">
             <nav>
               <div class="nav-content">
-                <li><a href="./index.html">Accueil</a></li>
-                <li><a href="./html/jeux.html">Jeux</a></li>
-                <li><a href="./html/livres_et_BDs.html">Livres et BDs</a></li>
+                <li><a href="../index.html">Accueil</a></li>
+                <li><a href="../html/jeux.html">Jeux</a></li>
+                <li><a href="../html/livres_et_BDs.html">Livres et BDs</a></li>
                 <li>
-                  <a href="./html/series_et_films.html">Series et films</a>
+                  <a href="../html/series_et_films.html">Series et films</a>
                 </li>
-                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="../html/contact.html">Contact</a></li>
               </div>
             </nav>
           </div>
@@ -32,7 +35,9 @@
       <main>
         <div class="main">
           <div class="main-story">
-            <div class="main-story-title"><h2>Ankama Editions</h2></div>
+            <div class="main-story-title">
+              <h1>Ankama Editions</h1>
+            </div>
             <div class="main-story-text">
               <p>
                 Ankama Éditions est une filiale de la société Ankama créée en
@@ -45,9 +50,116 @@
               </p>
             </div>
           </div>
-          <div class=""></div>
+          <div class="main-article">
+            <div class="main-article-image">
+              <img src="../images/Dofus_Logo.png" alt="Logo dofus" />
+            </div>
+            <div class="main-article-title">
+              <h2>Dofus</h2>
+            </div>
+            <div class="main-article-text">
+              <p>
+                Découvrez ou retrouvez dans ces ouvrages l'ambiance et le
+                background du célèbre jeu en ligne éponyme DOFUS. Vous
+                accompagnerez les plus illustres guerriers du Monde des Douze
+                dans leur quête des Dofus et rencontrerez au fil de ces
+                aventures des créatures plus terribles les unes que les autres !
+              </p>
+            </div>
+            <div class="main-article-list">
+              <ul>
+                <li>Artbooks</li>
+                <li>Mangas</li>
+                <li>BDs</li>
+                <li>Romans</li>
+                <li>Livres d'activités</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="main-article">
+            <div class="main-article-image">
+              <img src="../images/Wakfu_Logo.png" alt="Logo_Wakfu" />
+            </div>
+            <div class="main-article-title">
+              <h3>Wakfu</h3>
+            </div>
+            <div class="main-article-text">
+              <p>
+                La collection Wakfu elle se tourne sur l'univers de wakfu, qui
+                prend place des siècles après l'époque de Dofus et à la
+                reconstruction du monde sur de nouvelles valeurs, après
+                l'inondation du « Monde des Douze »
+              </p>
+            </div>
+            <div class="main-article-list">
+              <ul>
+                <li>Artbooks</li>
+                <li>BDS</li>
+                <li>Mangas</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="main-article">
+            <div class="main-article-image">
+              <img src="../images/maliki-logo.svg" alt="Logo Maliki" />
+            </div>
+            <div class="main-article-title">
+              <h2>Maliki</h2>
+            </div>
+            <div class="main-article-text">
+              <p>
+                Découvrez l'univers dynamique et acidulé de Maliki, une série de
+                BD au style manga qui dépeint le quotidien et les états d'âme
+                d'une jeune fille au caractère pétillant.
+              </p>
+            </div>
+            <div class="main-article-list">
+              <ul>
+                <li>BD</li>
+                <li>Romans</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="main-article">
+            <div class="main-article-image">
+              <img src="../images/Label_619_Logo.png" alt="Logo Label 619" />
+            </div>
+            <div class="main-article-title">
+              <h2>Label 619</h2>
+            </div>
+            <div class="main-article-text">
+              <p>
+                Le Label 619 réunit une sélection de BD et d'ouvrages inspirés
+                des univers contemporains, pop et modernes, résolument orientés
+                culture urbaine avec des titres phares tels que Mutafukaz,
+                Freaks' Squeele, DoggyBags et bien d'autres.
+              </p>
+            </div>
+            <div class="main-article-list">
+              <ul>
+                <li>Artbooks</li>
+                <li>livres d'activités</li>
+                <li>BD</li>
+                <li>Comics</li>
+                <li>Revues</li>
+                <li>Romans</li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </main>
     </div>
-  </body>
+    </main>
+
+    <!--------------------------------------------------------------------------footer------------------------------------------------------------------------------------->
+    <footer>
+      <div class="footer">
+        <p>Anthony Zeitoun© Novembre 2022</p>
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
